k8s/ingress_1/deploy_and_svc.yaml

# ingress controller
# need to use external one kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.8.2/deploy/static/provider/cloud/deploy.yaml


---
# svc and deploy
apiVersion: v1
kind: Service
metadata:
  name: hello-world-app-svc
spec:
  selector:
    name: hello-world-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hello-world-app
  template:
    metadata:
      name: hello-world-app
      labels:
        name: hello-world-app
    spec:
      containers:
        - name: hello-world-app
          image: chihhuiw/dotnet-helloworld:v1.0.7
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 1Gi
              cpu: 1000m
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: hello-express-app-svc
spec:
  selector:
    name: hello-express-app
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-express-app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      name: hello-express-app
  template:
    metadata:
      name: hello-express-app
      labels:
        name: hello-express-app
    spec:
      containers:
        - name: hello-express-app
          image: chihhuiw/nodejs-helloworld
          resources:
            requests:
              memory: 512Mi
              cpu: 500m
            limits:
              memory: 1Gi
              cpu: 1000m
          ports:
            - containerPort: 3000
